# vasak-gallery

./: README.md  index.html  package.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/indexer/: README.md  commands.rs  database.rs  mod.rs  scanner.rs  thumbnail.rs
src/components/: FullscreenViewer.vue  ImageGrid.vue  Lightbox.vue  TimelineSidebar.vue
src/components/topbar/: ActionControlsComponent.vue
src/components/ui/: AppButton.vue  MediaCard.vue  StatePanel.vue
src/layouts/: WindowAppLayout.vue
src/lib/: gallery-indexer.ts
src/router/: index.ts
src/types/: gallery.ts  vue-libvasak.d.ts
src/views/: GalleryView.vue
