[package]
name = "vasak-gallery"
version = "0.1.0"
description = "A Vasak Application (template)"
authors = ["Vasak Group", "Joaquin (Pato) Decima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vasak_gallery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-vicons = "2"
tauri-plugin-config-manager = "2"
gtk = "0.18"
# Indexación y miniaturas
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
image = "0.24"
ffmpeg-sidecar = "2.5"
walkdir = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
fxhash = "0.2"
once_cell = "1.20"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1  # Allows LLVM to perform better optimization.
lto = "thin"       # Thin LTO: ~90% de fat LTO, compila mucho más rápido.
opt-level = 3      # Máxima optimización de velocidad.
panic = "abort"    # Higher performance by disabling panic handlers.
strip = true       # Ensures debug symbols are removed.